--- a/API/API.csproj
+++ b/API/API.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
+        <PackageReference Include="NSwag.AspNetCore" Version="14.5.0" />
     </ItemGroup>
 
     <ItemGroup>
